# restaurant-forecast

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: 00-overview.md  01-data.md  02-features.md  03-models.md  04-evaluation.md  05-timesfm-hybrid.md  06-scaling.md  07-presentation.md
docs/adr/: 0001-hexagonal-architecture.md  0002-dataset-recruit.md  0003-timesfm-hybrid.md  0004-validation-and-selection.md
k8s/: predict-cronjob.yaml  retrain-cronjob.yaml  train-job.yaml
notebooks/: 01_eda.ipynb
roadmap/: README.md
scripts/: check_timesfm_endpoint.py  download_data.sh
space/: Dockerfile  app.py
src/forecasting/: __init__.py  __main__.py  config.py
src/forecasting/adapters/: __init__.py  local_artifacts.py  mlflow_tracker.py  plotting.py
src/forecasting/adapters/data/: recruit_csv.py
src/forecasting/application/: __init__.py  evaluate.py  find_best_model.py  predict.py  train.py
src/forecasting/domain/: __init__.py  entities.py  validation.py
src/forecasting/entrypoints/: __init__.py  cli.py
tests/: conftest.py
tests/adapters/: test_mlflow_tracker.py  test_models.py  test_plotting.py  test_recruit_csv.py  test_timesfm_hybrid.py  test_timesfm_remote.py  test_timesfm_zeroshot.py
tests/application/: test_find_best_model.py  test_predict.py  test_train.py
tests/domain/: test_evaluation.py  test_features.py  test_model_ports.py  test_validation.py
tests/domain/services/: test_model_selection.py  test_predictor.py  test_step4_report.py
(+29 files in other folders)
