[project]
name = "gstock-forecasting"
version = "0.1.0"
description = "Demand forecasting for hospitality (Recruit Restaurant) — tree models vs a TimesFM foundation-model hybrid."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "xgboost>=2.1",
    "mlflow>=2.16",
    "matplotlib>=3.9",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "black>=24.8",
]
# Only on the GPU host that serves TimesFM over HTTP (see space/app.py — torch + timesfm live
# there, never in the core install). The CV client (RemoteTimesFMForecaster) only needs
# `requests`, already a transitive dep, and calls the Space; it never runs TimesFM locally.
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
forecasting = "forecasting.entrypoints.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Notebooks are exploratory EDA: chained `plt` calls (E702) and per-cell imports are idiomatic.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
